# cpp_craft_1013

./: .gitignore  README.md
lections/: cpp_craft_lec_1_part_1.pptx  cpp_craft_lec_1_part_1_v1_2.pptx  cpp_craft_lec_1_part_2.pptx  cpp_craft_lec_1_part_2_v1_2.pptx  cpp_craft_lec_2_pre.pptx  cpp_craft_lec_3_pre.pptx  cpp_craft_lec_4_pre.pptx  cpp_craft_lec_5_pre.pptx
solutions/: dmitry_senkovich
solutions/Aliaksandr Talochka/: readme.txt
solutions/Eugeniya_Tereschenkova/: readme.txt
solutions/Rusovich_Yuriy/: readme.txt
solutions/a_ver/: readme.txt
solutions/a_ver/task_1/: CMakeLists.txt  islands.cpp  main.cpp  main_kmp.cpp  rational.cpp  reverse_string_kmp.cpp
solutions/a_ver/task_1/find_islands/: CMakeLists.txt  main.cpp
solutions/a_ver/task_1/rational_numbers/: CMakeLists.txt  main.cpp
solutions/a_ver/task_1/reverse_string/: CMakeLists.txt  Input.txt  Input_random.txt  main.cpp  main_kmp.cpp
solutions/a_ver/task_2/: CMakeLists.txt
solutions/a_ver/task_2/binary_data/: CMakeLists.txt  main.cpp
solutions/a_ver/task_2/lib/: CMakeLists.txt  deal.cpp  deal.h
solutions/a_ver/task_2/outdated_deal/: CMakeLists.txt  main.cpp  main_filesort.cpp  main_sort.cpp
solutions/a_ver/task_2/small_buffer/: CMakeLists.txt  main.cpp
solutions/ailyasov/: readme.txt
solutions/al_strokov/: readme.txt
solutions/aleks_apalikov/: readme.txt
solutions/alexandr_lapenkov/: readme.txt
solutions/andrei_ladyka/: readme.txt
solutions/andrei_perapiolkin/: readme.txt
solutions/andrew_pakhomov/: readme.txt
solutions/andrey_ladyka/: readme.txt
solutions/andrey_zhilka/: readme.txt
solutions/art_davydau/: readme.txt
solutions/sorca.by/: readme.txt
(+637 files in other folders)
